Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,25 +1,23 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5056755302:AAHUb3vbfeXRvwXYilCoyI829uhPmhAqOGs"
+GDRIVE_FOLDER_ID = "1UWUaUcy4U_7J1ZxY6WcI3j9mbb9EHfv0"
+OWNER_ID = 1883113120
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
-AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 8
+AUTO_DELETE_MESSAGE_DURATION = 5
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 5412484
+TELEGRAM_HASH = "37402de39e5eb30d378bf20823db1dfc"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+AUTHORIZED_CHATS = "1711380087 -1001469713348 -1001545188373 -1001561242337 -1001715638521 1883113120 -1001607216765 -1001539261935 1228644618 5092344424"  # Split by space
+SUDO_USERS = "1883113120 1711380087 2019057220"  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://kamileecher.ml/3:/TG"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
-UPTOBOX_TOKEN = ""
+UPTOBOX_TOKEN = "a308f973f081097d7f6ca38b9d807d6b2o45m"
 # Update
 UPSTREAM_REPO = ""
 # Leech
@@ -28,7 +26,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://mirrorleechbot1.herokuapp.com"
 IS_VPS = ""
 SERVER_PORT = ""
 WEB_PINCODE = ""
@@ -45,24 +43,24 @@ MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "541GGTaS"
+MEGA_EMAIL_ID = "imsniper404@gmail.com"
+MEGA_PASSWORD = "078KALI.root/hacker"
 BLOCK_MEGA_FOLDER = ""
 BLOCK_MEGA_LINKS = ""
 # Shortener
 SHORTENER = ""
 SHORTENER_API = ""
 # GDTOT COOKIES
-PHPSESSID = ""
-CRYPT = ""
+PHPSESSID = "1sdsp8v9ko3vlpkr5mgd50soni"
+CRYPT = "N0hkTUxPQUFid0I4bjYrMlJCSS8waDlzdEsyVWdWcE42ZGhjaFFSZk9Ecz0%3D"
 # Size Limits
 TORRENT_DIRECT_LIMIT = ""
 ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
@@ -70,7 +68,7 @@ BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 # Torrent Search
-SEARCH_API_LINK = ""
+SEARCH_API_LINK = "https://torrentkami.herokuapp.com"
 SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/rarbg.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/piratebay.py",
                    "https://raw.githubusercontent.com/qbittorrent/search-plugins/master/nova3/engines/legittorrents.py",
