--- a/config.env
+++ b/config.env
@@ -16,7 +16,7 @@ IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "True"
 INDEX_URL = "https://kamileecher.ml/3:/TG"
 STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
 UPTOBOX_TOKEN = "a308f973f081097d7f6ca38b9d807d6b2o45m"
 # Update
 UPSTREAM_REPO = ""
